[package]
name = "chromiumoxide_event_stream"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["George Pinaev"]
description = "Chromiumoxide events stream"
repository = "https://github.com/geopin90/chromiumoxide_event_stream"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["time"] }
chromiumoxide = "^0.7"
