[package]
name = "chromiumoxide_event_stream"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["George Pinaev"]
repository = "https://github.com/geopin90/chromiumoxide_event_stream"
description = "Library for capturing network responses from Chromium pages using chromiumoxide CDP (Chrome DevTools Protocol). Stream events back to Rust with optional URL and content-type filtering."
keywords = ["chrome", "chromedriver", "puppeteer", "automation", "chromiumoxide"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time"] }
chromiumoxide = "^0.7"
base64 = "0.22"
